fix: Content hidden by header issue

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+html, body {
   background: grey;
   margin: 0;
   padding: 0;
